--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ cloudinary==1.36.0
 dj-database-url==0.5.0
 dj3-cloudinary-storage==0.0.6
 Django==5.1.3
+django-allauth==65.3.0
 django-summernote==0.8.20.0
 gunicorn==23.0.0
 psycopg2==2.9.10
