--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,12 @@
 dj-database-url==0.5.0
 psycopg2==2.9.10
+django-allauth==65.3.0
+django-cloudinary-storage==0.3.0
+django-crispy-forms==2.3
+django-summernote==0.8.20.0
+gunicorn==23.0.0
+dj-database-url==2.3.0
+Django==5.1.3
+cloudinary==1.41.0
+asgiref==3.8.1
+whitenoise==6.8.2
